--- a/package.json
+++ b/package.json
@@ -11,6 +11,13 @@
   "body-parser": "^1.20.2",
   "cors": "^2.8.5",
   "mongoose": "^7.6.1"
+},
+  "dependencies": {
+  "express": "^4.18.2",
+  "mongoose": "^7.3.1",
+  "cors": "^2.8.5",
+  "multer": "^1.4.5"
 }
   }
+
 
