--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "express": "^4.18.2",
   "body-parser": "^1.20.2",
   "cors": "^2.8.5",
-  "mongoose": "^7.6.1",
-  "multer": "^1.4.5"
+  "mongoose": "^7.6.1"
 }
   }
+
 
 
 
