--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "express": "^4.18.2",
   "body-parser": "^1.20.2",
   "cors": "^2.8.5",
-  "mongoose": "^7.6.1"
+  "mongoose": "^7.6.1",
+  "@supabase/supabase-js": "^2.39.3"
 }
   }
-
-npm install @supabase/supabase-js
