--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "body-parser": "^1.20.2",
   "cors": "^2.8.5",
   "mongoose": "^7.6.1",
-  "@supabase/supabase-js": "^2.39.3"
+  "@supabase/supabase-js": "^2.39.3",
+    "axios": "^1.6.8",
+  "pdf-parse": "^1.1.1"
 }
   }
+
