--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "unity-choice-api",
   "version": "1.0.0",
+  "type": "module",
   "description": "Unity oyunundan gelen seçimleri alan basit Node.js sunucusu",
   "main": "server.js",
   "scripts": {
@@ -16,4 +17,5 @@
   "pdf-parse": "^1.1.1"
 }
   }
+
 
